Inserção das fontes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
     </script>
 </head>
 <body>
-	
+	<header class="header">
+		<div class="hero">
+			<div class="hero-content">
+				<div class="coming">VEM AÍ</div>
+				<div class="title">FRONT IN_<br>SALVADOR</div>
+				<div class="tag">FISSA1?</div>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
