--- a/index.html
+++ b/index.html
@@ -57,11 +57,19 @@
 </head>
 <body>
 	<header class="header">
-		<div class="hero">
-			<div class="hero-content">
-				<div class="coming">VEM AÍ</div>
-				<div class="title">FRONT IN_<br>SALVADOR</div>
-				<div class="tag">FISSA1?</div>
+		<div class="window">
+			<div class="window-bar clearfix">
+				<div class="window-bar-buttons"></div>
+				<div class="window-bar-input"></div>
+			</div>
+			<div class="header-content">
+				<div class="hero">
+					<div class="hero-content">
+						<div class="coming">VEM AÍ</div>
+						<div class="title">FRONT IN_<br>SALVADOR</div>
+						<div class="tag">FISSA1?</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
