Add animations and bg

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     	ga('send', 'pageview');
     </script>
 </head>
-<body>
+<body id="body">
 	<header class="header">
 		<div class="window">
 			<div class="window-bar clearfix">
@@ -67,9 +67,12 @@
 					<div class="hero-content">
 						<div class="coming">VEM AÍ</div>
 						<div class="title">FRONT IN_<br>SALVADOR</div>
-						<div class="tag">FISSA1?</div>
+						<div class="tag">FISSA</div>
 					</div>
 				</div>
+				<p class="msg">O maior evento voltado para</p>
+				<p class="msg msg2">Desenvolvedores de Salvador<span>_</span></p>
+				<div class="logo"><img src="assets/img/logo.svg" alt="Front In Salvador"></div>
 			</div>
 		</div>
 	</header>
