add floating points to hero

--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
 			</div>
 			<div class="header-content">
 				<div class="hero">
+					<div class="point red float a2 f1"></div>
+					<div class="point green float a1 f2"></div>
+					<div class="point blue float a1 f3"></div>
+					<div class="point blue float a2 f4"></div>
+					<div class="point red float a1 f5"></div>
+					<div class="point green float a2 f6"></div>
 					<div class="hero-content">
+						<div class="three-points hero-points"></div>
+						<div class="three-points inline-points"></div>
 						<div class="coming">VEM AÍ</div>
 						<div class="title">FRONT IN_<br>SALVADOR</div>
 						<div class="tag">FISSA</div>
@@ -72,6 +80,7 @@
 				</div>
 				<p class="msg">O maior evento voltado para</p>
 				<p class="msg msg2">Desenvolvedores de Salvador<span>_</span></p>
+				<div class="three-points msg-points"></div>
 				<div class="logo"><img src="assets/img/logo.svg" alt="Front In Salvador"></div>
 			</div>
 		</div>
