ajust link metadata

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<meta property="og:title" content="Front In Salvador 2017 | O maior evento de Front-End da Bahia!"/>
-	<meta property="og:image" content="http://frontinssa.com.br/assets/img/frontin-share.jpg" />
+	<meta property="og:image" content="http://frontinssa.com/assets/img/frontin-share.jpg" />
 	<meta property="og:site_name" content="Front In Salvador 2017"/>
 	<meta property="og:description" content="Durante um dia de sábado os participantes do evento irão desfrutar de palestras com os temas mais quentes da Web!" />
 
 	<meta property="twitter:title" content="Front In Salvador 2017 | O maior evento de Front-End da Bahia!"/>
-	<meta property="og:image" content="http://frontinssa.com.br/assets/img/frontin-share.jpg" />
+	<meta property="og:image" content="http://frontinssa.com/assets/img/frontin-share.jpg" />
 	<meta property="twitter:creator" content="Front In Salvador 2017"/>
 	<meta property="twitter:description" content="Durante um dia de sábado os participantes do evento irão desfrutar de palestras com os temas mais quentes da Web!" />
 
