fix orthographic error

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="tag">FISSA</div>
 					</div>
 					<div class="text-center call4">
-						<button class="btn-call4"> Call for pappers </button>
+						<button class="btn-call4"> Call for Papers </button>
 					</div>
 				</div>
 				<p class="msg">O maior evento voltado para</p>
