change class name and add button to register

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 						<div class="title">FRONT IN_<br>SALVADOR</div>
 						<div class="tag">FISSA</div>
 					</div>
-					<div class="text-center call4">
+					<div class="text-center btn-involved">
 						<button class="btn-call4"> Call for Papers </button>
+						<button class="btn-register"> Inscreva-se </button>
 					</div>
 				</div>
 				<p class="msg">O maior evento voltado para</p>
