add reference to event purchase page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 					</div>
 					<div class="text-center btn-involved">
 						<button class="btn-call4"> Call for Papers </button>
-						<button class="btn-register"> Inscreva-se </button>
+						<button class="btn-register">
+							<a class="register-page" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
+						</button>
 					</div>
 				</div>
 				<p class="msg">O maior evento voltado para</p>
