--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
 						<div class="tag">FISSA</div>
 					</div>
 					<div class="text-center btn-involved">
-						<button class="btn-call4"> Call for Papers </button>
-						<button class="btn-register">
-							<a class="register-page" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
-						</button>
+						<a class="btn-call4" target="_blank" href="#">Call for Papers</a>
+						<a class="btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
 					</div>
 				</div>
 				<p class="msg">O maior evento voltado para</p>
