Inclusão das seções sobre / local / apoiadores / patrocinadores / footer / palestrantes

--- a/index.html
+++ b/index.html
@@ -37,57 +37,277 @@
 	<meta property="twitter:description" content="Durante um dia de sábado os participantes do evento irão desfrutar de palestras com os temas mais quentes da Web!" />
 
 	<!-- styles -->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/responsive.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script>
-    	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    	ga('create', 'UA-44853532-11', 'auto');
-    	ga('send', 'pageview');
-    </script>
-</head>
-<body id="body">
-	<header class="header">
-		<div class="window">
-			<div class="window-bar clearfix">
-				<div class="window-bar-buttons"></div>
-				<div class="window-bar-input"></div>
-			</div>
-			<div class="header-content">
-				<div class="hero">
-					<div class="point red float a2 f1"></div>
-					<div class="point green float a1 f2"></div>
-					<div class="point blue float a1 f3"></div>
-					<div class="point blue float a2 f4"></div>
-					<div class="point red float a1 f5"></div>
-					<div class="point green float a2 f6"></div>
-					<div class="hero-content">
-						<div class="three-points hero-points"></div>
-						<div class="three-points inline-points"></div>
-						<div class="coming">VEM AÍ</div>
-						<div class="title">FRONT IN_<br>SALVADOR</div>
-						<div class="tag">FISSA</div>
-					</div>
-					<div class="text-center btn-involved">
-						<a class="btn-call4" target="_blank" href="#">Call for Papers</a>
-						<a class="btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
-					</div>
-				</div>
-				<p class="msg">O maior evento voltado para</p>
-				<p class="msg msg2">Desenvolvedores de Salvador<span>_</span></p>
-				<div class="three-points msg-points"></div>
-				<div class="logo"><img src="assets/img/logo.svg" alt="Front In Salvador"></div>
-			</div>
-		</div>
-	</header>
-</body>
-</html>
+        <![endif]-->
+        <script>
+        	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        	ga('create', 'UA-44853532-11', 'auto');
+        	ga('send', 'pageview');
+        </script>
+    </head>
+    <body id="body">
+    	<header class="header">
+    		<div class="container">
+    			<div class="window">
+    				<div class="window-bar clearfix">
+    					<div class="window-bar-buttons"></div>
+    					<div class="window-bar-input"></div>
+    				</div>
+    				<div class="header-content">
+    					<div class="hero">
+    						<div class="point red float a2 f1"></div>
+    						<div class="point green float a1 f2"></div>
+    						<div class="point blue float a1 f3"></div>
+    						<div class="point blue float a2 f4"></div>
+    						<div class="point red float a1 f5"></div>
+    						<div class="point green float a2 f6"></div>
+    						<div class="hero-content">
+    							<div class="three-points hero-points"></div>
+    							<div class="three-points inline-points"></div>
+    							<div class="coming">VEM AÍ</div>
+    							<h1 class="title">FRONT IN<br>SALVADOR_</h1>
+    							<h3 class="tag">FISSA</h3>
+    						</div>
+    						<div class="text-center btn-involved">
+    							<a class="btn-call4" target="_blank" href="https://goo.gl/forms/L6slauyHjV3sb8Ip1">Call for Papers</a>
+    							<a class="btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
+    						</div>
+    					</div>
+    					<p class="msg">O maior evento voltado para</p>
+    					<p class="msg msg2">Desenvolvedores de Salvador<span>_</span></p>
+    					<div class="three-points msg-points"></div>
+    					<div class="logo"><img src="assets/img/logo.svg" alt="Front In Salvador"></div>
+    				</div>
+    			</div>
+    		</div>
+    	</header>
+
+    	<section class="section section-about">
+    		<div class="container">
+                <div class="row">
+        			<div class="col-xs-12 col-sm-7">
+        				<div class="window window-public window-orange">
+        					<div class="window-bar clearfix">
+        						<div class="window-bar-buttons"></div>
+        						<div class="window-bar-input"></div>
+        					</div>
+        					<div class="window-content">
+        						<div class="title-section title-orange">
+        							<h1 class="title">SOBRE O<br>EVENTO_</h1>
+        							<h3 class="tag">ABOUT</h3>
+        						</div>
+        						<p>No dia <strong>27 de maio</strong> acontecerá o <strong>Front In Salvador</strong>. É um evento de software com o objetivo de movimentar a comunidade e cultura de FrontEnd na Bahia. Durante um dia de sábado os participantes do evento irão desfrutar de palestras com os temas mais quentes do mundo Front End.</p>
+        						<p>A motivação para a realização deste projeto é expandir e disseminar o conhecimento a respeito do tema Front-End na Bahia. Promovendo debates a respeito das experiências e práticas na área, compartilhando-as e divulgando-as, com profissionais, alunos e pessoas interessadas no tema.</p>
+        						<p>Nosso objetivo é oferecer à comunidade soteropolitana, um ciclo de debates com apresentação de palestras nos mais diversos temas e assuntos da área.</p>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-xs-12 col-sm-5">
+        				<div class="window window-public">
+        					<div class="window-bar clearfix">
+        						<div class="window-bar-buttons"></div>
+        						<div class="window-bar-input"></div>
+        					</div>
+        					<div class="public">
+        						<div class="public-title">O PÚBLICO</div>
+        						<div class="public-photo"><img src="assets/img/public.jpg" alt="Joselito e Raphael" class="img-responsive"></div>
+        						<p class="public-text">Alcançando profissionais das áreas de tecnologia e comunicação digital, nosso público é formado por empreendedores, gestores, desenvolvedores, designers, entusiastas e membros da comunidade.</p>
+        					</div>
+        				</div>
+        			</div>
+                </div>
+    		</div>
+    	</section>
+
+        <section class="section">
+            <div class="container">
+                <div class="title-speakers">PALESTRANTES</div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img" style="background-image:url(assets/img/speakers/maria.jpg)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Maria</strong> Clara</h2>
+                                    <p class="speaker-text">Front-End na <strong>EADBOX</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img" style="background-image:url(assets/img/beto.png)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Beto</strong> Muniz</h2>
+                                    <p class="speaker-text">Front-End na <strong>Toptal</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img" style="background-image:url(assets/img/speakers/rodrigo.png)">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Rodrigo</strong> Ribeiro</h2>
+                                    <p class="speaker-text">Engenheiro de Software na <strong>JUSBRASIL</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="speaker">
+                            <div class="speaker-img soon">
+                                <div class="speaker-content">
+                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    	<section class="section section-location">
+    		<div class="container">
+                <div class="row">
+        			<div class="col-xs-12 col-sm-6">
+        				<div class="window window-public window-blue">
+        					<div class="window-bar clearfix">
+        						<div class="window-bar-buttons"></div>
+        						<div class="window-bar-input"></div>
+        					</div>
+        					<div class="window-content">
+        						<div class="title-section title-blue title-location">
+        							<h1 class="title">O LOCAL<br>DO EVENTO_</h1>
+        							<h3 class="tag">LOCATION</h3>
+        						</div>
+        						<p>A Faculdade Ruy Barbosa (FRB) é uma das maiores e mais conceituadas instituições de ensino superior privada de Salvador, que possui três campus: Rio Vermelho (onde será realizado o evento), Paralela e Pituba. Oferece 22 cursos de graduação, além de 19 de pós-graduação e 7 de extensão, amplamente conteituados no mercado, sendo alguns destes totalmente relacionados com a proposta do Front In Salvador.</p>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-xs-12 col-sm-6">
+        				<div class="window window-public">
+        					<div class="window-bar clearfix">
+        						<div class="rounded rounded-min"></div>
+        					</div>
+        					<div class="map">
+        						<div id="map" class="map-content"></div>
+        						<p class="public-text map-text">
+        							422, Rua Theodomiro Baptista<br>
+        							Rio Vermelho, BA, 41940-320, Brasil
+        						</p>
+        					</div>
+        					<div class="bottom-bar clearfix">
+        						<div class="rounded"></div>
+        					</div>
+        				</div>
+        			</div>
+                </div>
+    		</div>
+    	</section>
+
+        <section class="section sponsors">
+            <div class="container">
+                <div class="title-speakers">PATROCINADORES</div>
+                
+                <div class="sponsor-content">
+                    <div class="sponsor-type"><img src="assets/img/gold.svg" alt="Gold"> Ouro</div>
+                    <a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Ouro</a>
+                </div>
+                <div class="sponsor-content">
+                    <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver"> Prata</div>
+                    <div class="clearfix">
+                        <div class="sponsor">
+                            <img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive">
+                        </div>
+                    </div>
+                </div>
+                <div class="sponsor-content">
+                    <div class="sponsor-type"><img src="assets/img/bronze.svg" alt="Bronze"> Bronze</div>
+                    <a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Bronze</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section sponsors">
+            <div class="container">
+                <div class="title-speakers">APOIADORES</div>
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3"><div title="Novatec" class="partner novatec"></div></div>
+                    <div class="col-xs-6 col-sm-3"><div title="Globo.com" class="partner globo"></div></div>
+                    <div class="col-xs-6 col-sm-3"><div title="Casa do Código" class="partner cdc"></div></div>
+                    <div class="col-xs-6 col-sm-3"><div title="DeVry | Ruy Barbosa" class="partner ruy"></div></div>
+                </div>
+            </div>
+        </section>
+
+    	<footer class="footer clearfix">
+    		<div class="container">
+    			<div class="copyright">2016-2017 © Todos os direitos reservados</div>
+    			<div class="links-footer">
+    				<a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Apresentação</a>
+                    <a href="http://pt-br.confcodeofconduct.com/" target="_blank">Código de Conduta</a>
+    				<a href="mailto:contact@frontinssa.com">Contato</a>
+    			</div>
+    		</div>
+    	</footer>
+
+    	<!-- scripts -->
+    	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsi9SDBTdc64Y7GZ-Svy45zJnxoOxj4Kw"></script>
+    	<script src="assets/js/scripts.js"></script>
+    </body>
+    </html>
