Ajustes no responsivo e style

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     							<h3 class="tag">FISSA</h3>
     						</div>
     						<div class="text-center btn-involved">
-    							<a class="btn-call4" target="_blank" href="https://goo.gl/forms/L6slauyHjV3sb8Ip1">Call for Papers</a>
-    							<a class="btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
+    							<a class="btn btn-call4" target="_blank" href="https://goo.gl/forms/L6slauyHjV3sb8Ip1">Call for Papers</a>
+    							<a class="btn btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
     						</div>
     					</div>
     					<p class="msg">O maior evento voltado para</p>
@@ -272,7 +272,7 @@
                     <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver"> Prata</div>
                     <div class="clearfix">
                         <div class="sponsor">
-                            <img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive">
+                            <img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive" title="Tampa Works">
                         </div>
                     </div>
                 </div>
