Ajustes no responsivo e inserção do palestrante Caio Lucas

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img" style="background-image:url(assets/img/speakers/maria.jpg)">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/maria.jpg)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Maria</strong> Clara</h2>
                                     <p class="speaker-text">Front-End na <strong>EADBOX</strong></p>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img" style="background-image:url(assets/img/beto.png)">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/beto.png)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Beto</strong> Muniz</h2>
                                     <p class="speaker-text">Front-End na <strong>Toptal</strong></p>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img" style="background-image:url(assets/img/speakers/rodrigo.png)">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/rodrigo.png)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Rodrigo</strong> Ribeiro</h2>
                                     <p class="speaker-text">Engenheiro de Software na <strong>JUSBRASIL</strong></p>
@@ -165,9 +165,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img soon">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/caio.png)">
                                 <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                    <h2 class="speaker-title"><strong>Caio</strong> Lucas</h2>
+                                    <p class="speaker-text">Mobile Software Engineer na <strong>UNIVERSO MW8/APP2SALES</strong></p>
                                 </div>
                             </div>
                         </div>
