Add Diego Leite e ajusts css

--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img soon">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/diego.jpg)">
                                 <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                    <h2 class="speaker-title"><strong>Diego</strong> Leite</h2>
+                                    <p class="speaker-text">Software Developer na <strong>MATRIX LABS</strong></p>
                                 </div>
                             </div>
                         </div>
