--- a/index.html
+++ b/index.html
@@ -264,13 +264,15 @@
                     <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver"> Prata</div>
                     <div class="clearfix">
                         <div class="sponsor">
-                            <img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive" title="Tampa Works">
+                            <a href="https://www.facebook.com/tampaworks/"><img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive" title="Tampa Works"></a>
                         </div>
                     </div>
                 </div>
                 <div class="sponsor-content">
                     <div class="sponsor-type"><img src="assets/img/bronze.svg" alt="Bronze"> Bronze</div>
-                    <a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Bronze</a>
+                    <div class="sponsor">
+                        <a href="https://www.jusbrasil.com.br/"><img src="assets/img/jusbrasil.svg" alt="JusBrasil" class="img-responsive jus" title="JusBrasil"></a>
+                    </div>
                 </div>
             </div>
         </section>
