--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="speaker-img ok" style="background-image:url(assets/img/speakers/maria.jpg)">
                                 <div class="speaker-content">
                                     <h2 class="speaker-title"><strong>Maria</strong> Clara</h2>
-                                    <p class="speaker-text">Front-End na <strong>EADBOX</strong></p>
+                                    <p class="speaker-text">Front-End na <strong>TAMPAWORKS</strong></p>
                                 </div>
                             </div>
                         </div>
@@ -273,6 +273,9 @@
                     <div class="sponsor">
                         <a href="https://www.jusbrasil.com.br/"><img src="assets/img/jusbrasil.svg" alt="JusBrasil" class="img-responsive jus" title="JusBrasil"></a>
                     </div>
+                    <div class="sponsor">
+                        <a href="https://www.umbler.com"><img src="assets/img/umbler.png" alt="Umbler" class="img-responsive jus" title="Umbler"></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -285,6 +288,8 @@
                     <div class="col-xs-6 col-sm-3"><div title="Globo.com" class="partner globo"></div></div>
                     <div class="col-xs-6 col-sm-3"><div title="Casa do Código" class="partner cdc"></div></div>
                     <div class="col-xs-6 col-sm-3"><div title="DeVry | Ruy Barbosa" class="partner ruy"></div></div>
+                    <div class="col-xs-6 col-sm-3"><div title="Usina Films" class="partner usina"></div></div>
+                    <div class="col-xs-6 col-sm-3"><div title="Universo MW8" class="partner mw8"></div></div>
                 </div>
             </div>
         </section>
