Add nome e foto do palestrante jonata

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/caio.png)">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/jonata.jpg)">
                                 <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Caio</strong> Lucas</h2>
-                                    <p class="speaker-text">Mobile Software Engineer na <strong>UNIVERSO MW8/APP2SALES</strong></p>
+                                    <h2 class="speaker-title"><strong>Jonata</strong> Weber</h2>
+                                    <p class="speaker-text">Software Engineer na <strong>Z3Web</strong></p>
                                 </div>
                             </div>
                         </div>
