--- a/index.html
+++ b/index.html
@@ -184,9 +184,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img soon">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/raphael.jpg)">
                                 <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                    <h2 class="speaker-title"><strong>Raphael</strong> Amorim</h2>
+                                    <p class="speaker-text">Software Developer na <strong>GLOBO.COM</strong></p>
                                 </div>
                             </div>
                         </div>
