Inserção da logo da Toptal nos patrocinadores

--- a/index.html
+++ b/index.html
@@ -267,15 +267,18 @@
                         <div class="sponsor">
                             <a href="https://www.facebook.com/tampaworks/"><img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive" title="Tampa Works"></a>
                         </div>
+                        <div class="sponsor">
+                            <a href="https://www.facebook.com/toptal/"><img src="assets/img/toptal.svg" alt="Toptal" class="img-responsive svg" title="Toptal"></a>
+                        </div>
                     </div>
                 </div>
                 <div class="sponsor-content">
                     <div class="sponsor-type"><img src="assets/img/bronze.svg" alt="Bronze"> Bronze</div>
                     <div class="sponsor">
-                        <a href="https://www.jusbrasil.com.br/"><img src="assets/img/jusbrasil.svg" alt="JusBrasil" class="img-responsive jus" title="JusBrasil"></a>
+                        <a href="https://www.jusbrasil.com.br/"><img src="assets/img/jusbrasil.svg" alt="JusBrasil" class="img-responsive svg" title="JusBrasil"></a>
                     </div>
                     <div class="sponsor">
-                        <a href="https://www.umbler.com"><img src="assets/img/umbler.png" alt="Umbler" class="img-responsive jus" title="Umbler"></a>
+                        <a href="https://www.umbler.com"><img src="assets/img/umbler.png" alt="Umbler" class="img-responsive svg" title="Umbler"></a>
                     </div>
                 </div>
             </div>
