Inserção da palestrante Isa

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     							<div class="three-points inline-points"></div>
     							<div class="coming">VEM AÍ</div>
     							<h1 class="title">FRONT IN<br>SALVADOR_</h1>
-    							<h3 class="tag">FISSA</h3>
+    							<h3 class="tag">27 DE MAIO</h3>
     						</div>
     						<div class="text-center btn-involved">
     							<a class="btn btn-register" target="_blank" href="https://loja.tampa.works/front-in-salvador-2017/"> Inscreva-se </a>
@@ -194,9 +194,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-4">
                         <div class="speaker">
-                            <div class="speaker-img soon">
+                            <div class="speaker-img ok" style="background-image:url(assets/img/speakers/isa.jpg)">
                                 <div class="speaker-content">
-                                    <h2 class="speaker-title"><strong>Em</strong> Breve</h2>
+                                    <h2 class="speaker-title"><strong>Isa</strong> Sobrinho</h2>
+                                    <p class="speaker-text">Designer Gráfica / UI / UX</p>
                                 </div>
                             </div>
                         </div>
