criar seção da programação do evento

--- a/index.html
+++ b/index.html
@@ -215,8 +215,15 @@
             </div>
         </section>
 
+		<section class="section">
+			<div class="container">
+				<div class="title-speakers">PROGRAMAÇÃO</div>
+			</div>
+		</section>
+
     	<section class="section section-location">
     		<div class="container">
+				<div class="title-speakers">LOCAL</div>
                 <div class="row">
         			<div class="col-xs-12 col-sm-6">
         				<div class="window window-public window-blue">
