--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 	<!-- styles -->
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/timeline.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -219,6 +220,20 @@
 			<div class="container">
 				<div class="title-speakers">PROGRAMAÇÃO</div>
 			</div>
+			<ul class="timeline">
+				<li>
+					<div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<h4 class="timeline-title">Mussum ipsum cacilds</h4>
+							<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+						</div>
+						<div class="timeline-body">
+						  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis,</p>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</section>
 
     	<section class="section section-location">
@@ -266,11 +281,11 @@
                 <div class="title-speakers">PATROCINADORES</div>
                 
                 <div class="sponsor-content">
-                    <div class="sponsor-type"><img src="assets/img/gold.svg" alt="Gold"> Ouro</div>
+                    <div class="sponsor-type"><img src="assets/img/gold.svg" alt="Gold">Ouro</div>
                     <a class="sponsor-info" href="http://frontinssa.com/2017.pdf" target="_blank">Seja um patrocinador Ouro</a>
                 </div>
                 <div class="sponsor-content">
-                    <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver"> Prata</div>
+                    <div class="sponsor-type"><img src="assets/img/silver.svg" alt="Silver">Prata</div>
                     <div class="clearfix">
                         <div class="sponsor">
                             <a href="https://www.facebook.com/tampaworks/"><img src="assets/img/tampa.png" alt="Tampa Works" class="img-responsive" title="Tampa Works"></a>
@@ -281,7 +296,7 @@
                     </div>
                 </div>
                 <div class="sponsor-content">
-                    <div class="sponsor-type"><img src="assets/img/bronze.svg" alt="Bronze"> Bronze</div>
+                    <div class="sponsor-type"><img src="assets/img/bronze.svg" alt="Bronze">Bronze</div>
                     <div class="sponsor">
                         <a href="https://www.jusbrasil.com.br/"><img src="assets/img/jusbrasil.svg" alt="JusBrasil" class="img-responsive svg" title="JusBrasil"></a>
                     </div>
