--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			</div>
 			<ul class="timeline">
 				<li>
-					<div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
 							<h4 class="timeline-title">Mussum ipsum cacilds</h4>
