criando painel da timeline

--- a/index.html
+++ b/index.html
@@ -219,21 +219,19 @@
 		<section class="section">
 			<div class="container">
 				<div class="title-speakers">PROGRAMAÇÃO</div>
-			</div>
-			<ul class="timeline">
+				<ul class="timeline">
 				<li>
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<h4 class="timeline-title">Mussum ipsum cacilds</h4>
-							<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
-						</div>
-						<div class="timeline-body">
-						  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis,</p>
+							<p><small class="text-muted"> 08:00 - 08:50 </small></p>
+							<h4 class="timeline-title">Credenciamento</h4>
 						</div>
 					</div>
 				</li>
 			</ul>
+			</div>
+			
 		</section>
 
     	<section class="section section-location">
