--- a/index.html
+++ b/index.html
@@ -220,13 +220,62 @@
 			<div class="container">
 				<div class="title-speakers">PROGRAMAÇÃO</div>
 				<ul class="timeline">
+				<!-- Credenciamento -->
 				<li>
 					<div class="timeline-badge"></div>
 					<div class="timeline-panel">
 						<div class="timeline-heading">
-							<p><small class="text-muted"> 08:00 - 08:50 </small></p>
+							<p><small class="text-muted">08:00 - 08:50</small></p>
 							<h4 class="timeline-title">Credenciamento</h4>
 						</div>
+					</div>
+				</li>
+				<!-- Maria Clara -->
+				<li class="timeline-inverted">
+					<div class="timeline-badge"></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<p><small class="text-muted">09:00 - 10:00</small></p>
+							<h4 class="timeline-title">Componentes Funcionais usando React e RamdaJs</h4>
+						</div>
+						 <div class="timeline-body">
+							 <p>React e Programação Funcional são tópicos cada vez mais relevantes no meio tecnológico, o objetivo dessa talk é mostrar como você pode construir componentes no React de uma maneira funcional usando a biblioteca RamdaJS.</p>
+						 </div>
+						 <div class="speaker-name">
+							 <h6>Maria Clara</h6>
+						 </div>
+					</div>
+				</li>
+				<!-- Diego Leite -->
+				<li>
+					<div class="timeline-badge"></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<p><small class="text-muted">08:00 - 08:50</small></p>
+							<h4 class="timeline-title">Explore o mundo do IoT com o MATRIX</h4>
+						</div>
+						 <div class="timeline-body">
+							 <p>nessa talk venha conhecer o projeto MATRIX. Com ele, é possível prototipar a sua solução de internet das coisas e tornar o seu sonho realidade.</p>
+						 </div>
+						 <div class="speaker-name">
+							 <h6>Diego Leite</h6>
+						 </div>
+					</div>
+				</li>
+				<!-- Beto Muniz -->
+				<li class="timeline-inverted">
+					<div class="timeline-badge"></div>
+					<div class="timeline-panel">
+						<div class="timeline-heading">
+							<p><small class="text-muted">09:00 - 10:00</small></p>
+							<h4 class="timeline-title">Web Underground</h4>
+						</div>
+						 <div class="timeline-body">
+							 <p>Você já ouviu falar da URL API? Ou da Payment Request API? Ou da especificação CSS Scroll Snap Points? Se ainda não, nesta talk irei explicar o que estas e muitas outras tecnologias não muito discutidas na comunidade são e o porque que elas deveriam constar no seu leque de opções tecnológicas para um desenvolvimento web moderno e otimizado.</p>
+						 </div>
+						 <div class="speaker-name">
+							 <h6>Beto Muniz</h6>
+						 </div>
 					</div>
 				</li>
 			</ul>
