--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 							<h4 class="timeline-title">Componentes Funcionais usando React e RamdaJs</h4>
 						</div>
 						 <div class="timeline-body">
-							 <p>React e Programação Funcional são tópicos cada vez mais relevantes no meio tecnológico, o objetivo dessa talk é mostrar como você pode construir componentes no React de uma maneira funcional usando a biblioteca RamdaJS.</p>
+							 <p>React e Programação Funcional são tópicos cada vez mais relevantes no meio tecnológico, o objetivo dessa talk é 
+								 mostrar como você pode construir componentes no React de uma maneira funcional usando a biblioteca RamdaJS.</p>
 						 </div>
 						 <div class="speaker-name">
 							 <h6>Maria Clara</h6>
@@ -255,7 +256,9 @@
 							<h4 class="timeline-title">Explore o mundo do IoT com o MATRIX</h4>
 						</div>
 						 <div class="timeline-body">
-							 <p>nessa talk venha conhecer o projeto MATRIX. Com ele, é possível prototipar a sua solução de internet das coisas e tornar o seu sonho realidade.</p>
+							 <p>Você já tentou desenvolver algo para IoT e teve que procurar o sensor certo para resolver o seu problema? Além de tudo, 
+								 você já teve que aprender algum tipo de linguagem de baixo nível para dar vida a sua ideia? Então, nessa talk venha conhecer 
+								 o projeto MATRIX. Com ele, é possível prototipar a sua solução de internet das coisas e tornar o seu sonho realidade.</p>
 						 </div>
 						 <div class="speaker-name">
 							 <h6>Diego Leite</h6>
@@ -271,7 +274,9 @@
 							<h4 class="timeline-title">Web Underground</h4>
 						</div>
 						 <div class="timeline-body">
-							 <p>Você já ouviu falar da URL API? Ou da Payment Request API? Ou da especificação CSS Scroll Snap Points? Se ainda não, nesta talk irei explicar o que estas e muitas outras tecnologias não muito discutidas na comunidade são e o porque que elas deveriam constar no seu leque de opções tecnológicas para um desenvolvimento web moderno e otimizado.</p>
+							 <p>Você já ouviu falar da URL API? ou da Payment Request API? ou da especificação CSS Scroll Snap Points? Se ainda não, nesta 
+								 talk irei explicar o que estas e muitas outras tecnologias não muito discutidas na comunidade e o porque que elas deveriam
+								  constar no seu leque de opções tecnológicas para um desenvolvimento web moderno e otimizado.</p>
 						 </div>
 						 <div class="speaker-name">
 							 <h6>Beto Muniz</h6>
